--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "next": "14.1.0",
     "pg": "^8.16.3",
+    "qs": "^6.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^10.1.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.7.2",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
