--- a/somet-strapi/package.json
+++ b/somet-strapi/package.json
@@ -19,12 +19,15 @@
     "@strapi/plugin-users-permissions": "5.33.0",
     "@strapi/provider-upload-cloudinary": "^5.33.1",
     "@strapi/strapi": "5.33.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "better-sqlite3": "12.4.1",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.0.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^20",
